--- a/mobile/css/common_new.css
+++ b/mobile/css/common_new.css
@@ -7,7 +7,7 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a {line-hei
 body {
     background:#fff;
     overflow-x:hidden;
-    touch-action: none;
+    /* touch-action: none; */
     -webkit-overflow-scrolling: none;
     /* overflow: hideen; */
     overscroll-behavior: none;
