--- a/mobile/css/v2/renew.css
+++ b/mobile/css/v2/renew.css
@@ -144,7 +144,7 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 .mainThemeWrap{position:relative;}
 .mainThemeWrap .mainThemeCon{width:100%;margin:0 auto;}
 .mainThemeCon{display:flex; justify-content:space-between; position:relative; z-index:5; flex-direction:column;}
-.slideListBx{width:100%; height:calc(100vh - 49em); }
+.slideListBx{width:100%; }
 .slideListBx .banThemeList{
 	padding: 40px 26px;
 }
@@ -153,29 +153,51 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 .slideListBx .banThemeList li dl dt{font-size:14px;font-weight:500;color:#111;line-height:40px;}
 .slideListBx .banThemeList li dl dd.txtTit{font-size:24px;font-weight:700;color:#1A1A1A;line-height: 32px;}
 .slideListBx .banThemeList li dl dd.txtTit .txtRed{color:#FF3333;}
-.slideListBx .banThemeList li dl dd.txtEx{margin-top:12px;font-size:16px;font-weight:400;color:#666666;line-height:24px;}
+.slideListBx .banThemeList li dl dd.txtEx{margin-top:12px;font-size:1em;font-weight:400;color:#666666;line-height:24px;}
 .slideListBx .banThemeList li a{position:relative;display:inline-block;margin-top:32px;min-width:116px;height:36px;padding:7px 40px 7px 16px;font-size:14px;font-weight:400;color:#1A1A1A;border-radius:36px;border:1px solid #666;box-sizing:border-box;}
 .slideListBx .banThemeList li a:after{display:block;content:'';position:absolute;right:10px;top:9px;width:18px;height:18px;background:url(../../images/renew/ic_arrow.png) no-repeat 0 0;}
-.slideListBx .banThemeList li .icon1{display:block;position:absolute;right:-5%;bottom:-35px;width:220px;height:121px;background:url(../../images/renew/ic_car.png) no-repeat 0 0; background-size: 220px auto;}
+.slideListBx .banThemeList li .icon1{display:block;position:absolute;right: -43px;bottom:-48px;width:220px;height:121px;background:url(../../images/renew/ic_car.png) no-repeat 0 0;background-size: 13.75em auto;}
 .slideListBx .banThemeList .btnView:hover{background:#1a1a1a;color:#fff;}
 
-.carThemeBx{width:100%;height:100%;}
+.carThemeBx{width:100%;height:100%;margin-top:30px;}
 .carThemeList{display:flex;flex-wrap:wrap;justify-content:space-between;padding: 0 26px 100px; position: relative;z-index: -1;}
 .carThemeList > li{position:relative;width:48%;}
 .carThemeList > li:nth-child(odd){margin-top:30px;}
-.carThemeList > li a{display:block;padding:0 0 15px 0;border-radius:5px;}
+.carThemeList > li a{position:relative;display:block;padding:0 0 15px 0;border-radius:5px;}
 /*.carThemeList > li a:hover{animation:carThemeList 0.5s 1 ease both;}*/
-.carThemeList li .state{display:block;position:absolute;right:12px;top:12px;padding:8px 10px;font-size:12px;font-weight:600;color:#fff;background:rgba(0, 0, 0, 0.4);border-radius:4px;}
-.carThemeList li .saleType{display:block;position:absolute;left:6px;top:98px;padding:5px 7px;font-size:12px;font-weight:600;color:#fff;background:#EE2929;border-radius:15px;}
-.carThemeList li .imgBx{border-radius:5px;overflow:hidden;}
+.carThemeList li .state{
+    display: block;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    padding: 6px 8px;
+    font-size: 11px;
+    font-weight: 600;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 4px;
+}
+.carThemeList li .saleType{
+    display: block;
+    position: absolute;
+    left: 6px;
+    bottom: 11px;
+    padding: 5px 9px;
+    font-size: 11px;
+    font-weight: 600;
+    color: #fff;
+    background: #EE2929;
+    border-radius: 15px;
+}
+.carThemeList li .imgBx{position:relative; border-radius:5px;overflow:hidden;}
 .carThemeList li .imgBx img{width: 100%;}
 .carThemeList li .carTxtCon{margin-top:16px;}
 .carThemeList li .carTxtCon dl.txtTit{display:flex;flex-wrap:wrap;}
-.carThemeList li .carTxtCon dl.txtTit dt{font-size:14px;font-weight:700;color:#1A1A1A;line-height:20px;}
-.carThemeList li .carTxtCon dl.txtTit dd{margin-top:4px;font-size:12px;font-weight:400;color:#666666;line-height:20px;}
+.carThemeList li .carTxtCon dl.txtTit dt{font-size:0.88em;font-weight:700;color:#1A1A1A;line-height:20px;}
+.carThemeList li .carTxtCon dl.txtTit dd{margin-top:4px;font-size:0.75em;font-weight:400;color:#666666;line-height:20px;}
 .carThemeList li .carTxtCon dl.txtTit dd::after{display:inline-block;content:'';width:1px;height:10px;margin:0 4px;background:#DDDDDD;}
 .carThemeList li .carTxtCon dl.txtTit dd:last-child::after{display:none;}
-.carThemeList li .carTxtCon dl.txtPrice{margin-top:16px;}
+.carThemeList li .carTxtCon dl.txtPrice{margin-top:0.50em;}
 .carThemeList li .carTxtCon dl.txtPrice dt{width:100%;overflow:hidden;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:2;align-self:stretch;font-size:16px;font-weight:400;color:#FF3333;line-height:24px;}
 .carThemeList li .carTxtCon dl.txtPrice dt .bold{font-weight:800;}
 .carThemeList li .carTxtCon dl.txtPrice dt .month{margin-left:4px;font-size:13px;}
@@ -214,8 +236,34 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 .carKeywordList{position:relative;width:100%;margin:0 auto;}
 .carKeywordList li{text-align:center;}
 .carKeywordList li a{position:relative;display:inline-block;width:100%;}
-.carKeywordList li .state{display:block;position:absolute;right:12px;top:12px;padding:8px 10px;font-size:12px;font-weight:600;color:#fff;background:rgba(0, 0, 0, 0.4);border-radius:4px;}
-.carKeywordList li .imgBx{border-radius:5px;overflow:hidden;}
+.carKeywordList li .state{display:block;position:absolute;z-index:2;right:12px;top:12px;padding:8px 10px;font-size:12px;font-weight:600;color:#fff;background:rgba(0, 0, 0, 0.4);border-radius:4px;}
+.carKeywordList li .rentType:after{
+    content:'렌트';
+    display: block;
+    position: absolute;
+    left: 6px;
+    bottom: 11px;
+    padding: 5px 9px;
+    font-size: 11px;
+    font-weight: 600;
+    color: #fff;
+    background: #333;
+    border-radius: 15px;
+}
+.carKeywordList li .saleType:after{
+    content:'구매';
+    display: block;
+    position: absolute;
+    left: 6px;
+    bottom: 11px;
+    padding: 5px 9px;
+    font-size: 11px;
+    font-weight: 600;
+    color: #fff;
+    background: #EE2929;
+    border-radius: 15px;
+}
+.carKeywordList li .imgBx{border-radius:5px;overflow:hidden;position:relative;}
 .carKeywordList li .imgBx img{width:100%;}
 .carKeywordList li .carTxtCon{margin-top:16px;text-align:left;}
 .carKeywordList li .carTxtCon dl.txtTit{display:flex;flex-wrap:wrap;height:71px;}
