--- a/mobile/css/common.css
+++ b/mobile/css/common.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 /* reset */
-* {margin:0;padding:0;box-sizing:border-box;font-family: 'SUIT','Noto Sans KR' ;font-feature-settings: "tnum"}
+* {margin:0;padding:0;box-sizing:border-box;font-family:'pretendard', 'Noto Sans KR', sans-serif;font-feature-settings: "tnum"}
 html {background: #fff !important;}
 html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a {line-height:1.5;color:#1A1A1A;font-size:14px;font-weight:400;}
 html, body {
@@ -1061,6 +1061,10 @@ footer .foot-app .bt-app-ios {background:url("../images/common/foot-link-ios.png
     -webkit-border-radius: 8px;
     border-radius: 8px;
     z-index: 2;
+}
+.list-search .sch-group input::placeholder{
+    color: #555;
+    opacity: 1;
 }
 .list-search .sch-group .typed-text-area{
     position:absolute;
