--- a/mobile/css/fonts.css
+++ b/mobile/css/fonts.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 
 @font-face {
     font-family: 'Noto Sans KR';
