--- a/mobile/css/search-list.css
+++ b/mobile/css/search-list.css
@@ -1936,6 +1936,7 @@ margin: 0 auto;
     display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
 }
 .tab-content-wrap .total_price .prc{
     color: #ff3333;
