--- a/mobile/css/common_new.css
+++ b/mobile/css/common_new.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 
 /* reset */
 * {margin:0;padding:0;box-sizing:border-box;font-family:'pretendard', 'Noto Sans KR', sans-serif;font-feature-settings: "tnum"}
@@ -131,7 +132,7 @@ button {border:0;background:0;cursor:pointer;outline:none;transition: all 0.1s;}
      margin-bottom:8px;
 }
 .form-sec .tit, .ex-box .tit, .input-item .ess{
-    color:#ff3333;
+    color:#333;
 }
 
 .flex {
