--- a/pc/css/renew.css
+++ b/pc/css/renew.css
@@ -33,21 +33,37 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 .visualTxt .vsLeft.active.intro{width:100%;}
 .visualTxt > div{position:relative;height:100%;box-sizing: border-box;text-align: center;display: flex;flex-direction: column;align-items: center;justify-content: center;text-align:center;overflow:hidden;}
 .visualTxt > div a{display:inline-block;position: relative;z-index:5;width: 55%;padding: 10% 0;margin-top:17%;}
-.visualTxt > div a .vsTit{animation:txtLeft 1s ease-in-out both ;display:block;font-size:24px;font-weight:700;color:#1A1A1A;line-height:28px;}
-.visualTxt > div a .vsEx{animation:txtLeft 1s 0.3s ease-in-out both ;display:block;margin:24px 0 48px;font-size:40px;font-weight:700;color:#1A1A1A;line-height:56px;}
+.visualTxt > div a .vsTit{animation:txtLeft 1s ease-in-out both ;display:block;font-size:24px;font-weight:700;color:#FFF;line-height:28px;}
+.visualTxt > div a .vsEx{animation:txtLeft 1s 0.3s ease-in-out both ;display:block;margin:24px 0 48px;font-size:40px;font-weight:700;color:#fff;line-height:56px;}
 .visualTxt .vsRight a .vsTit{animation:txtRight 1s 0.3s ease-in-out both ;}
 .visualTxt .vsRight a .vsEx{animation:txtRight 1s 0.8s ease-in-out both ;}
 .visualTxt .vsRight .vsBg2{background: url(../images/renew/main2.jpg) no-repeat 0 0;background-size:cover;}
 .visualTxt .vsLeft.active{ width:65%;}
 .visualTxt .vsRight.active{width:65%;} 
 
+.visualTxt div.main_bg_video{
+	position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+}
+.visualTxt div.main_bg_video .main_video_content {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  filter: brightness(30%);
+}
+
 .visualTxt > div.active a{margin-top:-15%;}
 .visualTxt > div.active a .vsTit{color:#fff;}
 .visualTxt > div.active a .vsEx{color:#fff;}
 .visualTxt > div.active .btnAroow{display:inline-block;animation:txtDown 0.8s 0.5s ease-in-out both ;}
 .visualTxt > div.active .vsBg1{animation:idx_bg 2s ease-in-out both;position:absolute;left:0;top:0;display:block;width:100%;height:100%;background: url(../images/renew/main1.jpg) no-repeat 0 0;background-size:cover;}
-.visualTxt > div.active .vsBg2{animation:idx_bg 2s ease-in-out both;position:absolute;left:0;top:0;display:block;width:100%;height:100%;background: url(../images/renew/main2.jpg) no-repeat 0 0;background-size:cover;}
-.visualTxt > div.active .vsBg2::after{content:'';position:absolute;z-index:1;left:0;top:0;width:100%;height:100%;background:rgba(0, 0, 0, 0.4);}
+.visualTxt > div .vsBg2{animation:idx_bg 2s ease-in-out both;position:absolute;left:0;top:0;display:block;width:100%;height:100%;background: url(../images/renew/main2.jpg) no-repeat 0 0;background-size:cover;}
+.visualTxt > div .vsBg2::after{content:'';position:absolute;z-index:1;left:0;top:0;width:100%;height:100%;background:rgba(0, 0, 0, 0.8);}
+.visualTxt > div.active .vsBg2::after{content:'';position:absolute;z-index:1;left:0;top:0;width:100%;height:100%;background:rgba(0, 0, 0, 0.5);}
 .visualTxt > div a .btnAroow{display:none;width:68px;height:68px;border-radius:50%;background:#FF3333 url(../images/renew/ic_arrow2.png) no-repeat center center;}
 .visualTxt > div a .btnAroow:hover{background:#1A1A1A url(../images/renew/ic_arrow2.png) no-repeat center center;}
 
@@ -258,7 +274,7 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 .carBanList .slick-dots li.slick-active button:before{width:11px;height:11px;background:#1A1A1A;border-radius:16px;opacity:1;border:none;}
 
 /* 메인 카테고리 */
-.carCateWrap{width:1120px;margin:0 auto;padding:120px 0 0;}
+.carCateWrap{width:1120px;margin:0 auto;padding:65px 0 0;}
 .carCateWrap .titTab{display:flex;justify-content:center;}
 .carCateWrap .titTab button{display:inline-block;min-width:160px;height:54px;padding:13px 30px;margin-left:12px;border-radius:54px;font-size:16px;font-weight:400;color:#999;line-height:18px;border:1px solid #F7F7F7;background:#F7F7F7;box-sizing:border-box;}
 .carCateWrap .titTab button:first-child{margin-left:0;}
