--- a/mobile/css/v2/renew.css
+++ b/mobile/css/v2/renew.css
@@ -47,7 +47,7 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
   height: 100%;
   width: 100%;
   object-fit: cover;
-  filter: brightness(30%);
+  filter: brightness(50%);
 }
 
 /*.visualTxt .vsRight a .vsTit{animation:txtRight 1s 0.3s ease-in-out both ;}*/
@@ -89,7 +89,7 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 .quickBan .quickList a .num{position:absolute;right:-3px;top:0;  display: inline-block; min-width:24px;height:18px;padding:2px 5px; font-size:13px;font-weight:700;color:#fff;line-height:14px;background: #FF3333;border-radius: 18px;box-sizing: border-box;text-align: center;}
 
 .srhWrap{display:none;position: fixed;z-index:100;left:0;top:0; width:100%;height:100%;background:rgba(0, 0, 0, 0.8);}
-.mainSrhBx{position:absolute;left:50%;top:50%;width:588px;margin:-70px 0 0 -290px;}
+.mainSrhBx{position:absolute;top:30%;width: calc(100% - 40px);/* margin: 0 15px; *//* left: 15px; */text-align: center;margin: 0 20px;}
 .mainSrhBx *{vertical-align: middle;}
 .mainSrhBx .txt{margin-bottom:20px;font-size:24px;font-weight:400;color:#fff;line-height:36px;text-align:center;} 
 .mainSrhBx .txt .countNum{margin-top:-2px;display:inline-block; color:#FF0000;font-weight:900;} 
@@ -99,13 +99,13 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 .mainSrhBx .selectSrh li:first-child{margin-top:0;}
 .mainSrhBx .selectSrh li a{display:block;padding:12px;font-size:16px;font-weight:400;color:#1A1A1A;line-height:24px;border-radius: 10px;background:#fff;}
 .mainSrhBx .selectSrh li a:hover{background:#F5F7FA;}
-.mainSrhBx .srhTxtList{position:absolute;left:165px;top:82px;width:330px; text-align:left;}
+.mainSrhBx .srhTxtList{position:absolute;left:40px;top:82px;width:330px; text-align:left;}
 .mainSrhBx .srhTxtList li{}
 .mainSrhBx .srhTxtList li a{font-size:20px;font-weight:400;color:#fff;line-height:40px;}
 .mainSrhBx .srhTxtList li a .bold{color:orange;font-weight:700; }
 .mainSrhBx .srhTxtList li a span{vertical-align: middle;}
 .mainSrhBx .inputSrhBx{position:relative;width:100%;height:80px;padding:17px 30px 0;border:4px solid #FF3333;background: #fff;border-radius:80px;box-sizing: border-box;}
-.mainSrhBx .inputSrhBx input[type='text']{width:360px;height:40px;border:none; font-size:20px;font-weight:400;color:#1A1A1A;line-height:24px;}
+.mainSrhBx .inputSrhBx input[type='text']{width:100%;height:40px;border:none; font-size:20px;font-weight:400;color:#1A1A1A;line-height:24px;}
 .mainSrhBx .inputSrhBx input[type='text']::placeholder{color:#999;}
 .mainSrhBx .inputSrhBx .btnSrhSelect{position:relative;min-width:100px;margin-right:16px; font-size:20px;font-weight:400;color:#1A1A1A;line-height:24px;text-align:left;}
 .mainSrhBx .inputSrhBx .btnSrhSelect::after{position:absolute;right:0;top:4px; display:block;content:''; width:16px;height:16px;background: url(../../images/renew/btn_select_arrow.png) no-repeat 0 0;}
