--- a/mobile/css/v2/renew.css
+++ b/mobile/css/v2/renew.css
@@ -99,13 +99,13 @@ html, body, h1, h2, h3, h4, h5, h6, input, select, textarea, button, a{font-fami
 .mainSrhBx .selectSrh li:first-child{margin-top:0;}
 .mainSrhBx .selectSrh li a{display:block;padding:12px;font-size:16px;font-weight:400;color:#1A1A1A;line-height:24px;border-radius: 10px;background:#fff;}
 .mainSrhBx .selectSrh li a:hover{background:#F5F7FA;}
-.mainSrhBx .srhTxtList{position:absolute;left:40px;top:82px;width:330px; text-align:left;}
-.mainSrhBx .srhTxtList li{}
+.mainSrhBx .srhTxtList{display:none;position:absolute;left:40px;top:82px;width:330px; text-align:left;}
+.mainSrhBx .srhTxtList.visible{display:block;}
 .mainSrhBx .srhTxtList li a{font-size:20px;font-weight:400;color:#fff;line-height:40px;}
 .mainSrhBx .srhTxtList li a .bold{color:orange;font-weight:700; }
 .mainSrhBx .srhTxtList li a span{vertical-align: middle;}
 .mainSrhBx .inputSrhBx{position:relative;width:100%;height:80px;padding:17px 30px 0;border:4px solid #FF3333;background: #fff;border-radius:80px;box-sizing: border-box;}
-.mainSrhBx .inputSrhBx input[type='text']{width:100%;height:40px;border:none; font-size:20px;font-weight:400;color:#1A1A1A;line-height:24px;}
+.mainSrhBx .inputSrhBx input[type='text']{width:100%;height:40px;border:none; font-size:20px;font-weight:400;color:#1A1A1A;line-height:24px;outline: none;}
 .mainSrhBx .inputSrhBx input[type='text']::placeholder{color:#999;}
 .mainSrhBx .inputSrhBx .btnSrhSelect{position:relative;min-width:100px;margin-right:16px; font-size:20px;font-weight:400;color:#1A1A1A;line-height:24px;text-align:left;}
 .mainSrhBx .inputSrhBx .btnSrhSelect::after{position:absolute;right:0;top:4px; display:block;content:''; width:16px;height:16px;background: url(../../images/renew/btn_select_arrow.png) no-repeat 0 0;}
